--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ defaultContentLanguage: "ja"
 hasCJKLanguage: true
 title: '問学研究会'
 theme:  ["github.com/Mitrichius/hugo-theme-anubis"]
-
+publishDir: "docs"
 menu:
   main:
   - identifier: reading
